# PA1484-weather-app

./: .clang-format  .gitignore  api_guide.md  api_test.py  simulate.bat  simulate.sh  simulator_guide.md
assets/: final.ino  v1.ino
project/: icons.h  project.ino
simulator/: .gitignore  CMakeLists.txt  build.sh  lv_conf.h  run.sh
simulator/docs/: README.md  WIFI_SIMULATION.md
simulator/src/: hardware_mock.h  main.c  project_wrapper.cpp
simulator/src/arduino_compat/: Arduino.h  ArduinoJson.h  ESP32.cpp  ESP32.h  HTTPClient.h  IPAddress.h  LV_Helper.h  LilyGo_AMOLED.h  WiFi.h  WiFiClientSecure.h  esp_sntp.h  esp_system.h  esp_task_wdt.h  esp_wifi.h  lvgl.h
simulator/src/hal/: hal.c
